<resources>
    <string name="app_name">Tip Time</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percentage_amount">Percentage Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>
